[package]
name = "kv-log-macro"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/kv-log-macro"
documentation = "https://docs.rs/kv-log-macro"
description = "Log macro for log's kv-unstable backend."
keywords = ["log", "macro", "kv", "key", "value", "key-value"]
categories = ["text-processing"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4.8"

[dev-dependencies]
femme = "1.2.0"
