[package]
name = "kv-log-macro"
version = "1.0.6"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/kv-log-macro"
documentation = "https://docs.rs/kv-log-macro"
description = "Log macro for log's kv-unstable backend."
keywords = ["log", "macro", "kv", "key", "value"]
categories = ["text-processing"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
proc-macro-hack = "0.5"
log = { version = "0.4.8", features = ["kv_unstable"] }
kv-log-macro-impl = { version = "0.0.5", path = "./kv-log-macro-impl" }

[dev-dependencies]
femme = "1.2.0"
